# cudaFlow-benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: 1.cu
benchmark/extreme_graph/: extreme_graph.hpp  main.cpp  main.cu
benchmark/random_DAG/: cuda_executor.hpp  main.cu  random_DAG.hpp
benchmarks/: .graph_base.hpp.swp
benchmarks/IEEE_Graph_Challenge/SNIG/: CMakeLists.txt
benchmarks/IEEE_Graph_Challenge/SNIG/SNIG/: SNIG.hpp
benchmarks/IEEE_Graph_Challenge/SNIG/SNIG/snig/: snig.hpp
benchmarks/IEEE_Graph_Challenge/SNIG/SNIG/utility/: reader.hpp
benchmarks/IEEE_Graph_Challenge/SNIG/base/: base.hpp
benchmarks/IEEE_Graph_Challenge/SNIG/main/: main.cu
benchmarks/IEEE_Graph_Challenge/SNIG/snig/: snig.hpp
benchmarks/extreme_graph/: extreme_graph.hpp  main.cu
benchmarks/random_DAG/: cuda_executor.hpp  main.cu  random_DAG.hpp
benchmarks/simple_graph/: graph_base.hpp  graph_declaration.hpp  graph_executor.hpp  main.cu
benchmarks/simple_graph/extreme_graph/: parallel_graph.hpp  serial_graph.hpp
benchmarks/simple_graph/map_reduce/: diamond.hpp
benchmarks/simple_graph/random_DAG/: random_DAG.hpp
benchmarks/simple_graph/simple_graph/extreme_graph/: parallel_graph.hpp
benchmarks/simple_graph/simple_graph/random_DAG/: random_DAG.hpp
benchmarks/simple_graph/simple_graph/utility/: graph_executor.hpp
main/: simple_graph.cu  snig.cu
taskflow/cuda/: cuda_flow.hpp
utility/: caculator.cpp
